# Alchemy

./: .gitmodules  CMakeLists.txt  README.md  demo.cpp  main.cpp  scratch.rb
.cache/clangd/index/: alchemy.hpp.AAF85735F35787CF.idx  camra.cpp.A620C67F604C7002.idx  context.c.CFBC98AB287D2476.idx  demo.cpp.3FDBC158895DCA4D.idx  egl_context.c.17FEA9022E2C9903.idx  glew.c.7B2F406B9B26860E.idx  glew.h.1D8B4F585097B6C6.idx  glfw3.h.EBCE1BF213D03A28.idx  glfw3native.h.5E4889672B0F8425.idx  init.c.D89F95D3BDEBED12.idx  input.c.87512A63396CBAC7.idx  internal.h.EDE4D3D3C1513AA3.idx  linearBVH.cpp.CD3EB6E0416937F6.idx  linearBVH.h.0CD3F60DB5EC8274.idx  mappings.h.FBC5059EA3FDA222.idx  monitor.c.E2DB8BFB15E82F96.idx  null_init.c.3488D2A83AE8D23E.idx  null_joystick.c.687A2915696A7A86.idx  null_joystick.h.BE6A86C607BD7455.idx  null_monitor.c.1BE9564EEDDBC7EE.idx  null_platform.h.D69D03167E9AB6BC.idx  null_window.c.69AE3ECEC8CD981A.idx  object_IO.cpp.AA69CB65463C6DCB.idx  osmesa_context.c.584C3E89A63A5377.idx  platform.c.EA6253D06A4F877D.idx  platform.h.4222559135765268.idx  tensor.hpp.A779469EC37D2D5C.idx  vulkan.c.020EF908A54793A7.idx  wgl_context.c.95D9C0F82BA0FA20.idx  wglew.h.F5F9A37BE166E6B2.idx  win32_init.c.8941A86038775A24.idx  win32_joystick.c.B04F957D2580F71D.idx  win32_joystick.h.9DEF1B2442FF7A5D.idx  win32_module.c.57D0FD869174E50E.idx  win32_monitor.c.0A20A58A6DEACC6C.idx  win32_platform.h.D755AF18B19AB26F.idx  win32_thread.c.EFC7DACAF1975E19.idx  win32_thread.h.E1237E651C566C7D.idx  win32_time.c.BC0F6FDF4C01AF17.idx  win32_time.h.36CAA937DD97B2A2.idx  (+3 more)
include/alchemy/: alchemy.hpp  algorithm.hpp  display.hpp  tensor.hpp
include/alchemy/internal/: object_file.hpp
src/: alchemy.cpp  camra.cpp  window.cpp  windows.cpp
src/Object/: object_IO.cpp
src/Topology/: linearBVH.cpp  linearBVH.h
